basic chat functionality

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,8 +10,7 @@ spring.jpa.hibernate.ddl-auto=create
 
 # Logging
 logging.level.com.bfwg=DEBUG
-logging.level.org.springframework.web=ERROR
-
+logging.level.org.springframework.web=TRACE
 # Server
 server.port = 8080
 frontend.port=4200
@@ -19,3 +18,4 @@ frontend.port=4200
 # Spring
 spring.main.allow-bean-definition-overriding=true
 
+openai.key=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
