--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,7 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
         <frontend-bundle-dir>../frontend/dist/front/</frontend-bundle-dir>
-        <start-class>com.sectors.test.Application</start-class>
+        <start-class>com.gpt.Application</start-class>
 
     </properties>
 
